Fix oak blocks in structures being scannable, improve blacklist (closes #52, closes #58)